--- a/index.html
+++ b/index.html
@@ -15,18 +15,18 @@
         <a href="#" class="logo">
             <i class="fas fa-igloo"></i>
         </a>
-        <a href="#" class="togglebtn">
+        <div class="togglebtn">
             <i class="fas fa-bars"></i>
-        </a>
+        </div>
         <div class="navbar_menu">
             <a href="#">Home</a>
             <a href="#">About</a>
-            <a href="#">Services</a>
+            <a href="#">Ability</a>
             <a href="#">Education</a>
             <a href="#">Works</a>
             <a href="#">Contact</a>
         </div>
-    </nav>
+    </nav> 
     <!--Home-->
     <section id="home">
         <div class="inner_width">
@@ -55,13 +55,12 @@
                 <div class="about_text">
                     <h2>Hi I'm JongBuem</h2>
                     <h3>
-                        <span>Developer</span>
                         <span>Front end</span>
+                        <span>Developer</span>
                         <span>Junior</span>
                     </h3>
                     <p>
-                        안녕!!! 호이!!! Hello!!!
-                    </p>
+                     안녕하세요! 웹 개발자로 취업을 목표로 공부하고 있습니다. ༼◉_◉ ༽
                 </div>
             </div>
 
@@ -109,10 +108,42 @@
         </div>
     </section>
 
-    <!--services-->
-    <section id="services" class="dark">
+    <!--Abilitys-->
+    <section id="Abilitys">
         <div class="inner_width">
-            <h1 class="section_title">Services</h1>
+            <h1 class="section_title">Ability</h1>
+            <div class="Abilitys">
+                <div class="Ability">
+                    <i class="icon fas fa-paint-brush"></i>
+                    <h4>Desingn</h4>
+                </div>
+
+                <div class="Ability">
+                    <i class="icon fas fa-pager"></i>
+                    <h4>Build Websites</h4>
+                </div>
+
+                <div class="Ability">
+                    <i class="icon fas fa-database"></i>
+                    <h4>Manage Database</h4>
+                </div>
+
+                <div class="Ability">
+                    <i class="icon fas fa-assistive-listening-systems"></i>
+                    <h4>Communication</h4>
+                </div>
+
+                <div class="Ability">
+                    <i class="icon far fa-user"></i>
+                    <h4>UI / UX</h4>
+                </div>
+
+                <div class="Ability">
+                    <i class="icon fas fa-keyboard"></i>
+                    <h4>Revise</h4>
+                </div>
+
+            </div>
         </div>
     </section>
 </body>
