--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                         <span>Junior</span>
                     </h3>
                     <p>
-                     안녕하세요! 웹 개발자로 취업을 목표로 공부하고 있습니다. ༼◉_◉ ༽
+                    안녕하세요! 웹 개발자로 취업을 목표로 공부하고 있습니다. ༼◉_◉ ༽
                 </div>
             </div>
 
@@ -72,7 +72,6 @@
                     </div>
                     <div class="skill_bar html"></div>
                 </div>
-
                 <div class="skill">
                     <div class="skill_info">
                         <span>CSS</span>
@@ -80,7 +79,6 @@
                     </div>
                     <div class="skill_bar css"></div>
                 </div>
-
                 <div class="skill">
                     <div class="skill_info">
                         <span>Javascript</span>
@@ -88,7 +86,6 @@
                     </div>
                     <div class="skill_bar js"></div>
                 </div>
-
                 <div class="skill">
                     <div class="skill_info">
                         <span>Vue</span>
@@ -96,7 +93,6 @@
                     </div>
                     <div class="skill_bar vue"></div>
                 </div>
-
                 <div class="skill">
                     <div class="skill_info">
                         <span>MySQL</span>
@@ -108,7 +104,7 @@
         </div>
     </section>
 
-    <!--Abilitys-->
+    <!--Ability-->
     <section id="Abilitys">
         <div class="inner_width">
             <h1 class="section_title">Ability</h1>
@@ -117,32 +113,52 @@
                     <i class="icon fas fa-paint-brush"></i>
                     <h4>Desingn</h4>
                 </div>
-
                 <div class="Ability">
                     <i class="icon fas fa-pager"></i>
                     <h4>Build Websites</h4>
                 </div>
-
                 <div class="Ability">
                     <i class="icon fas fa-database"></i>
                     <h4>Manage Database</h4>
                 </div>
-
                 <div class="Ability">
                     <i class="icon fas fa-assistive-listening-systems"></i>
                     <h4>Communication</h4>
                 </div>
-
                 <div class="Ability">
                     <i class="icon far fa-user"></i>
                     <h4>UI / UX</h4>
                 </div>
-
                 <div class="Ability">
                     <i class="icon fas fa-keyboard"></i>
                     <h4>Revise</h4>
                 </div>
-
+            </div>
+        </div>
+    </section>
+    <!--Education-->
+    <section id="Education">
+        <div class="inner_width">
+            <h1 class="section_title">Education</h1>
+            <div class="time_line">
+                <div class="block">
+                    <h4>2012 - 2015</h4>
+                    <h3>계룡디지텍고등학교</h3>
+                    <p>정보통신학과에서 공부하면서 기초 Computer science를
+                        배울 수 있었습니다.</p>
+                </div>
+                <div class="block">
+                    <h4>2015 - 2021</h4>
+                    <h3>부산외국어대학교</h3>
+                    <p>컴퓨터소프트웨어융합 학부에서 임베디드소프트웨어트랙을 전공하면서
+                        C, Java, html, DB, Editor text 등 다양한 언어를 배울 수 있었습니다.
+                    </p>
+                </div>
+                <div class="block">
+                    <h4>2021</h4>
+                    <h3>웹 개발</h3>
+                    <p>웹 개발을 위해 독학으로 공부중입니다.</p>
+                </div>
             </div>
         </div>
     </section>
