--- a/index.html
+++ b/index.html
@@ -19,12 +19,11 @@
             <i class="fas fa-bars"></i>
         </div>
         <div class="navbar_menu">
-            <a href="#">Home</a>
-            <a href="#">About</a>
-            <a href="#">Ability</a>
-            <a href="#">Education</a>
-            <a href="#">Works</a>
-            <a href="#">Contact</a>
+            <a href="#home">Home</a>
+            <a href="#about">About</a>
+            <a href="#Abilitys">Ability</a>
+            <a href="#Education">Education</a>
+            <a href="#contact">Contact</a>
         </div>
     </nav> 
     <!--Home-->
@@ -162,5 +161,51 @@
             </div>
         </div>
     </section>
+    <!--Contact-->
+    <section id="contact">
+        <div class="inner_width">
+            <h1 class="section_title">Contact</h1>
+            <div class="contact_info">
+                <div class="item">
+                    <i class="fas fa-mobile-alt"></i>
+                    +010 - 4428 - 0544
+                </div>
+
+                <div class="item">
+                    <i class="fas fa-envelope"></i>
+                    whdqja1918@naver.com
+                </div>
+
+                <div class="item">
+                    <i class="fas fa-map-marker-alt"></i>
+                    Daejeon, South Korea 
+                </div>
+            </div>
+
+            <form action="#" class="contact_form">
+                <input type="text" class="name" placeholder="Your Name">
+                <input type="email" class="email" placeholder="Your email">
+                <input type="text" class="subject" placeholder="Subject">
+                <template class="message" placeholder="Message"></template>
+                <input type="submit" value="Send Message" class="btn">
+            </form>
+        </div>
+    </section>
+    <!--Footer-->
+    <footer>
+        <div class="inner_width">
+            <div class="copyright">
+                &copy; 2021 | Created  <a href="#">JongBuem</a>
+            </div>
+            <div class="sm">
+                <i class="fab fa-facebook-f"></i>
+                <i class="fab fa-twitter"></i>
+                <i class="fab fa-instagram"></i>
+                <i class="fab fa-github"></i>
+                <i class="fab fa-youtube"></i>
+            </div>
+        </div>
+    </footer>
+    <a href="#home"><button class="goTop fas fa-arrow-up"></button></a>
 </body>
 </html>
